--- a/index.html
+++ b/index.html
@@ -9,62 +9,17 @@
 </head>
 
 <body>
-	<div class="menu">
-		<main>
-			<h1 class="title">CAMPER CAFE</h1>
-			<p class="title__details">Est. 2020</p>
-			<hr>
-			<section class="coffee">
-				<h2 class="coffee__title">Coffee</h2>
-				<img src="https://cdn.freecodecamp.org/curriculum/css-cafe/coffee.jpg" alt="coffee icon">
-				<article class="item">
-					<p class="flavor">French Vanilla</p>
-					<p class="price">3.00</p>
-				</article>
-				<article class="item">
-					<p class="flavor">Caramel Macchiato</p>
-					<p class="price">3.75</p>
-				</article>
-				<article class="item">
-					<p class="flavor">Pumpkin Spice</p>
-					<p class="price">3.50</p>
-				</article>
-				<article class="item">
-					<p class="flavor">Hazelnut</p>
-					<p class="price">4.00</p>
-				</article>
-				<article class="item">
-					<p class="flavor">Mocha</p>
-					<p class="price">4.50</p>
-				</article>
-			</section>
-			<section>
-				<h2 class="dessert__title">Desserts</h2>
-				<img src="https://cdn.freecodecamp.org/curriculum/css-cafe/pie.jpg" alt="pie icon">
-				<article class="item">
-					<p class="dessert">Donut</p>
-					<p class="price">1.50</p>
-				</article>
-				<article class="item">
-					<p class="dessert">Cherry Pie</p>
-					<p class="price">2.75</p>
-				</article>
-				<article class="item">
-					<p class="dessert">Cheesecake</p>
-					<p class="price">3.00</p>
-				</article>
-				<article class="item">
-					<p class="dessert">Cinnamon Roll</p>
-					<p class="price">2.50</p>
-				</article>
-			</section>
-		</main>
-		<hr class="bottom-line">
-		<footer class="contact__info">
-			<p><a href="https://www.freecodecamp.org">Visit our website</a></p>
-			<p class="address">123 Free Code Camp Drive</p>
-		</footer>
-	</div>
+<h1>Хелоу дюд</h1>
+<script type="text/javascript">
+	window.helpcrunchSettings = {
+	  organization: 'justmarkets',
+	  appId: '6c224f5f-2f02-4775-9886-bd4607b1e6e7',
+	};
+  </script>
+  
+  <script type="text/javascript">
+	(function(w,d){var hS=w.helpcrunchSettings;if(!hS||!hS.organization){return;}var widgetSrc='https://'+hS.organization+'.widget.helpcrunch.com/';w.HelpCrunch=function(){w.HelpCrunch.q.push(arguments)};w.HelpCrunch.q=[];function r(){if (d.querySelector('script[src="' + widgetSrc + '"')) { return; }var s=d.createElement('script');s.async=1;s.type='text/javascript';s.src=widgetSrc;(d.body||d.head).appendChild(s);}if(d.readyState === 'complete'||hS.loadImmediately){r();} else if(w.attachEvent){w.attachEvent('onload',r)}else{w.addEventListener('load',r,false)}})(window, document)
+  </script>
 </body>
 
 </html>
